--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -257,7 +257,7 @@ void main(void) {
                 }
             }
             if(currDirection == "W"){
-                if (maze.data[maze.startPosition[0] + xOffset - 1][maze.startPosition[1]] != 1) {
+                if (maze.data[maze.startPosition[0] - xOffset - 1][maze.startPosition[1]] != 1) {
                     xOffset -= 1;
                 }
             }
@@ -280,7 +280,7 @@ void main(void) {
                 }
             }
             if(currDirection == "W"){
-                if (maze.data[maze.startPosition[0] + xOffset + 1][maze.startPosition[1]] != 1) {
+                if (maze.data[maze.startPosition[0] - xOffset + 1][maze.startPosition[1]] != 1) {
                     xOffset += 1;
                 }
             }
