--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -47,14 +47,9 @@
             <td>
 <textarea style="font-family: monospace" id="mazeTextArea" cols="25" rows="10">
 #####
+#...#
 #.#.#
-#N.##
-#...#
-#...#
-#...#
-#...#
-#...#
-#...#
+#N..#
 #####
 </textarea>
                 <br>
@@ -257,7 +252,7 @@ void main(void) {
                 }
             }
             if(currDirection == "W"){
-                if (maze.data[maze.startPosition[0] - xOffset - 1][maze.startPosition[1]] != 1) {
+                if (maze.data[maze.startPosition[0] + xOffset - 1][maze.startPosition[1]] != 1) {
                     xOffset -= 1;
                 }
             }
