--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -82,16 +82,21 @@ uniform mat4 Vmatrix;
 uniform mat4 Mmatrix;
 attribute vec3 color;
 varying vec3 vColor;
+varying vec3 vPosition;
 void main(void) {
     gl_Position = Pmatrix*Vmatrix*Mmatrix*vec4(position, 1.);
+	vPosition = position;
     vColor = color;
 }
 </script>
 <script id="fragmentShader" type="x-shader/x-fragment">
 precision mediump float;
 varying vec3 vColor;
+varying vec3 vPosition;
 uniform sampler2D texture;
+uniform samplerCube uniform_cubemap;
 void main(void) {
+	//gl_FragColor = textureCube(uniform_cubemap, vPosition);
     gl_FragColor = texture2D(texture, vColor.xy);
 }
 </script>
@@ -348,6 +353,8 @@ void main(void) {
                                       
     /*=================== Shaders =========================*/
 
+	var uniform_cubemap, cubemap_texture, cubemap_image, cubemap_counter;
+	
     var vertCode = document.getElementById("vertexShader").innerHTML;
 
     var fragCode = document.getElementById("fragmentShader").innerHTML;
@@ -383,6 +390,7 @@ void main(void) {
     // Color
     gl.enableVertexAttribArray(color);
     gl.useProgram(shaderProgram);
+	
 
     /*==================== MATRIX =====================*/
 
@@ -483,7 +491,7 @@ void main(void) {
 
     gl.enable(gl.DEPTH_TEST);
     //gl.depthFunc(gl.LEQUAL);
-    gl.clearColor(0.3, 0.7, 1.0, 0.9);
+    gl.clearColor(0.3, 0.7, 1.0, 0.0);
     gl.clearDepth(1.0);
 
     gl.viewport(0.0, 0.0, canvas.width, canvas.height);
@@ -515,6 +523,9 @@ void main(void) {
             }
         }
     }
+	
+	var uniform_cubemap = gl.getUniformLocation(shaderProgram, "uniform_cubemap");
+	
 
     for (var i = 0; i < maze.data.length; i++) {
         for (var j = 0; j < maze.data[i].length; j++) {
@@ -538,7 +549,73 @@ void main(void) {
         
     window.requestAnimationFrame(animate);
     }
-
+	
+	function onload_cubemap(){
+		if (++cubemap_counter < 6)
+			return;
+		cubemap_texture = gl.createTexture();
+		gl.bindTexture(gl.TEXTURE_CUBE_MAP, cubemap_texture);
+		// wtf? no SRGB in webgl?
+		for (var i = 0; i < 6; i++)
+			gl.texImage2D(gl.TEXTURE_CUBE_MAP_POSITIVE_X + i, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, cubemap_image[i]);
+		// gl.texParameteri(gl.TEXTURE_CUBE_MAP, gl.TEXTURE_WRAP_R, gl.CLAMP_TO_EDGE);
+		// gl.texParameteri(gl.TEXTURE_CUBE_MAP, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
+		// gl.texParameteri(gl.TEXTURE_CUBE_MAP, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
+		// linear interpolation in srgb color space .. just great :(
+		gl.texParameteri(gl.TEXTURE_CUBE_MAP, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
+		gl.texParameteri(gl.TEXTURE_CUBE_MAP, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
+		return;
+	}
+	function load_cubemap(src)
+	{
+		cubemap_counter = 0;
+		cubemap_image = [];
+		for (var i = 0; i < 6; i++) {
+			cubemap_image[i] = new Image();
+			cubemap_image[i].onload = onload_cubemap;
+			cubemap_image[i].src = src[i];
+		}
+	}
+	function load_cubemap_files(e)
+	{
+		var info = "";
+		var num = e.files.length;
+		if (num < 6) {
+			info += "only " + num + " face" + (num == 1 ? "" : "s") + " selected. ";
+			info += "please select 6 faces named: posx.*, negx.*, posy.*, negy.*, posz.* and negz.*";
+			document.getElementById("output").innerHTML = info;
+			return;
+		}
+		var cubemap = [];
+		var sides = [ "posx", "negx", "posy", "negy", "posz", "negz" ];
+		for (var j = 0; j < 6; j++) {
+			for (var i = 0; i < 6; i++) {
+				var name = e.files[i].name;
+				var base = name.substr(0, name.lastIndexOf('.'));
+				if (base == sides[j]) {
+					cubemap.push(window.URL.createObjectURL(e.files[i]));
+					info += e.files[i].name + " ";
+					break;
+				}
+			}
+		}
+		num = cubemap.length;
+		if (num < 6) {
+			info += (6 - num) + " face" + (num == 5 ? " is" : "s are") + " missing. ";
+			info += "please select 6 faces named: posx.*, negx.*, posy.*, negy.*, posz.* and negz.*";
+			document.getElementById("output").innerHTML = info;
+			return;
+		}
+		document.getElementById("output").innerHTML = info;
+		load_cubemap(cubemap);
+	}
+	
+	var cmap = [];
+	var sides = [ "posx", "negx", "posy", "negy", "posz", "negz" ];
+	for (var i = 0; i < 6; i++)
+		cmap.push("sky" + "/" + sides[i] + ".jpg");
+	load_cubemap(cmap);
+	
     var wallImage = new Image();
     wallImage.onload = function() {
         // Step 1: Create the texture object.
