--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -82,22 +82,22 @@ uniform mat4 Vmatrix;
 uniform mat4 Mmatrix;
 attribute vec3 color;
 varying vec3 vColor;
-varying vec3 vPosition;
+varying vec4 vPosition;
 void main(void) {
     gl_Position = Pmatrix*Vmatrix*Mmatrix*vec4(position, 1.);
-	vPosition = position;
+	vPosition = Vmatrix * vec4(position, 1.0);
     vColor = color;
 }
 </script>
 <script id="fragmentShader" type="x-shader/x-fragment">
 precision mediump float;
 varying vec3 vColor;
-varying vec3 vPosition;
+varying vec4 vPosition;
 uniform sampler2D texture;
 uniform samplerCube uniform_cubemap;
 void main(void) {
-	//gl_FragColor = textureCube(uniform_cubemap, vPosition);
-    gl_FragColor = texture2D(texture, vColor.xy);
+	gl_FragColor = textureCube(uniform_cubemap, vPosition.xyz);
+    //gl_FragColor = texture2D(texture, vColor.xy);
 }
 </script>
 <script>
@@ -335,6 +335,10 @@ void main(void) {
     8,9,10, 8,10,11, 12,13,14, 12,14,15,
     16,17,18, 16,18,19, 20,21,22, 20,22,23 
     ];
+	
+	var skyverts = [
+		-1000,-1000,-1000, 1000,-1000,-1000, 1000, 1000,-1000, -1000, 					1000,-1000,-1000,-1000, 1000, 1000,-1000, 1000, 1000, 1000, 1000, -1000, 		1000, 1000,-1000,-1000,-1000, -1000, 1000,-1000, -1000, 1000, 1000, 			-1000,-1000, 1000,1000,-1000,-1000, 1000, 1000,-1000, 1000, 1000, 1000, 		1000,-1000, 1000,-1000,-1000,-1000, -1000,-1000, 1000, 1000,-1000, 				1000, 1000,-1000,-1000,-1000, 1000,-1000, -1000, 1000, 1000, 1000, 1000, 		1000, 1000, 1000,-1000,
+	];	
 
     // Create and store data into vertex buffer
     var vertex_buffer = gl.createBuffer ();
@@ -491,7 +495,7 @@ void main(void) {
 
     gl.enable(gl.DEPTH_TEST);
     //gl.depthFunc(gl.LEQUAL);
-    gl.clearColor(0.3, 0.7, 1.0, 0.0);
+    gl.clearColor(0.3, 0.7, 1.0, 1.0);
     gl.clearDepth(1.0);
 
     gl.viewport(0.0, 0.0, canvas.width, canvas.height);
