--- a/final/index.html
+++ b/final/index.html
@@ -31,97 +31,39 @@
     </style>
 	
 	<script type="text/javascript">
+var audioCtx = new (window.AudioContext || window.webkitAudioContext)(); // define audio context
 
-var buff = [];
+var analyser = audioCtx.createAnalyser();
+var distortion = audioCtx.createWaveShaper();
+var gainNode = audioCtx.createGain();
+var biquadFilter = audioCtx.createBiquadFilter();
+analyser.fftSize = 256;
+var bufferLength = analyser.frequencyBinCount; // half the FFT value
+var buff = new Uint8Array(bufferLength); 
 
-  var webaudio_tooling_obj = function () {
+navigator.getUserMedia (
+  // constraints - only audio needed for this app
+  {
+    audio: true
+  },
 
-    var audioContext = new AudioContext();
+  // Success callback
+  function(stream) {
+    source = audioCtx.createMediaStreamSource(stream);
+    source.connect(analyser);
+    analyser.connect(distortion);
+    distortion.connect(biquadFilter);
+    biquadFilter.connect(gainNode);
+    gainNode.connect(audioCtx.destination); // connecting the different audio graph nodes together
 
-    var BUFF_SIZE = 16384;
+    loop(gl, program, vertexBuffer, indexBuffer);
+  },
 
-    var audioInput = null,
-        microphone_stream = null,
-        gain_node = null,
-        script_processor_node = null,
-        script_processor_fft_node = null,
-        analyserNode = null;
-
-    if (!navigator.getUserMedia)
-            navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia ||
-                          navigator.mozGetUserMedia || navigator.msGetUserMedia;
-
-    if (navigator.getUserMedia){
-
-        navigator.getUserMedia({audio:true}, 
-          function(stream) {
-              start_microphone(stream);
-              loop(gl, program, vertexBuffer, indexBuffer);
-          },
-          function(e) {
-            alert('Error capturing audio.');
-          }
-        );
-
-    } else { alert('getUserMedia not supported in this browser.'); }
-
-    function process_microphone_buffer(event) {
-
-        var i, N, inp, microphone_output_buffer;
-
-        microphone_output_buffer = event.inputBuffer.getChannelData(0);
-    }
-
-    function start_microphone(stream){
-
-      gain_node = audioContext.createGain();
-      gain_node.connect( audioContext.destination );
-
-      microphone_stream = audioContext.createMediaStreamSource(stream);
-      microphone_stream.connect(gain_node); 
-
-      script_processor_node = audioContext.createScriptProcessor(BUFF_SIZE, 1, 1);
-      script_processor_node.onaudioprocess = process_microphone_buffer;
-
-      microphone_stream.connect(script_processor_node);
-
-      // --- enable volume control for output speakers
-      gain_node.gain.value = 0;
-      document.getElementById('volume').addEventListener('change', function() {
-
-          var curr_volume = this.value;
-          gain_node.gain.value = curr_volume;
-
-          console.log("curr_volume ", curr_volume);
-      });
-
-      // --- setup FFT
-
-      script_processor_fft_node = audioContext.createScriptProcessor(2048, 1, 1);
-      script_processor_fft_node.connect(gain_node);
-
-      analyserNode = audioContext.createAnalyser();
-      analyserNode.smoothingTimeConstant = 0;
-      analyserNode.fftSize = 256;
-
-      microphone_stream.connect(analyserNode);
-
-      analyserNode.connect(script_processor_fft_node);
-
-      script_processor_fft_node.onaudioprocess = function() {
-
-        // get the average for the first channel
-        var array = new Uint8Array(analyserNode.frequencyBinCount);
-        analyserNode.getByteFrequencyData(array);
-
-        // draw the spectrogram
-        if (microphone_stream.playbackState == microphone_stream.PLAYING_STATE) {
-          buff = array;
-        }
-      };
-    }
-
-  }(); //  webaudio_tooling_obj = function()
+  // Error callback
+  function(err) {
+    console.log('The following gUM error occured: ' + err);
+  }
+);
 
 	</script>
 </head>
@@ -213,6 +155,7 @@ void main() {
     }    
 
     function loop(gl, program, vertexBuffer, indexBuffer) {
+
         gl.clearColor(0.0, 0.0, 0.0, 0.0);
         gl.clear(gl.COLOR_BUFFER_BIT);
         gl.useProgram(program);
@@ -220,6 +163,7 @@ void main() {
         var tex = gl.createTexture();
         gl.bindTexture(gl.TEXTURE_2D, tex);
 
+        analyser.getByteFrequencyData(buff);
         var arr = [];
         for (var i = 0; i < 128; i++) {
           arr.push(buff[i]);
@@ -227,7 +171,6 @@ void main() {
           arr.push(buff[i]);
           arr.push(255);
         }
-        console.log(arr.length);
         var oneDTextureTexels = new Uint8Array(arr);
 
         var width = 128;
