--- a/final/index.html
+++ b/final/index.html
@@ -60,6 +60,14 @@ function makeDistortionCurve(amount) {
 //distortion.oversample = '4x';
 var gainNode = audioCtx.createGain();
 var biquadFilter = audioCtx.createBiquadFilter();
+var treble = audioCtx.createBiquadFilter();
+treble.type = "highshelf";
+treble.frequency.value = 2048;
+treble.gain.value = 0;
+var bass = audioCtx.createBiquadFilter();
+bass.type = "lowshelf";
+bass.frequency.vallue = 256;
+bass.gain.value = 0;
 analyser.fftSize = 512;
 var bufferLength = analyser.frequencyBinCount; // half the FFT value
 var buff = new Uint8Array(bufferLength);
@@ -89,10 +97,12 @@ navigator.getUserMedia (
     fileSource = audioCtx.createMediaElementSource(audio);
     bufferSource = audioCtx.createBufferSource();
     source = fileSource;
-    source.connect(analyser);
-    analyser.connect(distortion);
+    source.connect(distortion);
     distortion.connect(biquadFilter);
-    biquadFilter.connect(gainNode);
+    biquadFilter.connect(bass);
+    bass.connect(treble);
+    treble.connect(analyser);
+    analyser.connect(gainNode);
     //synthDelay = audioCtx.createDelay(5.0);
     gainNode.connect(audioCtx.destination); // connecting the different audio graph nodes together
 
@@ -118,10 +128,14 @@ navigator.getUserMedia (
 <div id="controls" style="float:right;">
     <h4>Volume</h4>
     <input id="volume" type="range" min="0" max="1" step="0.1" value="1.0"/>
-    <h4>Biquad Filter</h4>
+    <h4>Low Pass Filter</h4>
     <input id="biquad" type="range" min="0" max="22050" step="50" value="22050"/>
     <h4>Distortion</h4>
     <input id="distortion" type="range" min="0" max="1000" step="50" value="0"/>
+    <h4>Bass</h4>
+    <input id="bass" type="range" min="-20" max="20" step="1" value="0"/>
+    <h4>Treble</h4>
+    <input id="treble" type="range" min="-20" max="20" step="1" value="0"/>
     <h4>Visualization Mode</h4>
     <select id="mode">
         <option value="frequency">Frequency</option>
@@ -397,9 +411,17 @@ $("#distortion").change(function() {
     distortion.oversample = '4x';
     if (value == 0) {
         distortion.oversample = 'none';
+        distortion.curve = null;
     }
 });
-var fr;
+$("#bass").change(function() {
+    var value = parseInt(document.getElementById("bass").value);
+    bass.gain.value = value;
+});
+$("#treble").change(function() {
+    var value = parseInt(document.getElementById("treble").value);
+    treble.gain.value = value;
+});
 $("#loadFile").click(function() {
     file = document.getElementById("fileLoc").files[0];
     fr = new FileReader();
@@ -421,6 +443,21 @@ $("#loadFile").click(function() {
           },
         function(e){ console.log("Error with decoding audio data" + e.err); });
     };
+});
+$("#webglCanvas").mousemove(function (event) {
+    var clientRect = $("#webglCanvas")[0].getBoundingClientRect();
+    var x = event.clientX - clientRect.left;
+    var y = clientRect.height - (event.clientY - clientRect.top);
+    // Convert to 0 to 1
+    var xc = x / clientRect.width;
+    var yc = y / clientRect.height;
+});
+$("#webglCanvas").mousedown(function (event) {
+    if (audioCtx.state == "running") {
+        audioCtx.suspend();
+    } else {
+        audioCtx.resume();
+    }
 });
 </script>
 </body>
