--- a/final/index.html
+++ b/final/index.html
@@ -77,6 +77,11 @@ var fileSource;
 var bufferSource;
 var audio;
 var synthDelay;
+var splitter = audioCtx.createChannelSplitter(2);
+var merger = audioCtx.createChannelMerger(2);
+var leftGain = audioCtx.createGain();
+var rightGain = audioCtx.createGain();
+
 
 navigator.getUserMedia (
   // constraints - only audio needed for this app
@@ -103,8 +108,12 @@ navigator.getUserMedia (
     bass.connect(treble);
     treble.connect(analyser);
     analyser.connect(gainNode);
-    //synthDelay = audioCtx.createDelay(5.0);
-    gainNode.connect(audioCtx.destination); // connecting the different audio graph nodes together
+    gainNode.connect(splitter);
+    splitter.connect(leftGain, 0);
+    splitter.connect(rightGain, 1);
+    leftGain.connect(merger, 0, 0);
+    rightGain.connect(merger, 0, 1);
+    merger.connect(audioCtx.destination); // connecting the different audio graph nodes together
 
     // Play the song
     fileSource.mediaElement.play();
@@ -136,6 +145,8 @@ navigator.getUserMedia (
     <input id="bass" type="range" min="-20" max="20" step="1" value="0"/>
     <h4>Treble</h4>
     <input id="treble" type="range" min="-20" max="20" step="1" value="0"/>
+    <h4>Balance</h4>
+    <input id="balance" type="range" min="0" max="1" step="0.01" value="0.5"/>
     <h4>Visualization Mode</h4>
     <select id="mode">
         <option value="frequency">Frequency</option>
@@ -399,10 +410,10 @@ $("#inputMode").change(function() {
     fileSource.disconnect();
     if (document.getElementById("inputMode").value == "microphone") {
         source = micSource;
-        micSource.connect(analyser);
+        micSource.connect(distortion);
     } else {
         source = fileSource;
-        fileSource.connect(analyser);
+        fileSource.connect(distortion);
     }
 });
 $("#distortion").change(function() {
@@ -437,7 +448,7 @@ $("#loadFile").click(function() {
             bufferSource = audioCtx.createBufferSource();
             bufferSource.buffer = buffer;
 
-            bufferSource.connect(analyser);
+            bufferSource.connect(distortion);
 
             bufferSource.start();
           },
@@ -451,6 +462,7 @@ $("#webglCanvas").mousemove(function (event) {
     // Convert to 0 to 1
     var xc = x / clientRect.width;
     var yc = y / clientRect.height;
+    var frequencyBin = xc*analyser.frequencyBinCount;
 });
 $("#webglCanvas").mousedown(function (event) {
     if (audioCtx.state == "running") {
