--- a/final/index.html
+++ b/final/index.html
@@ -193,6 +193,7 @@ precision highp float;
 varying vec2 geom_texCoord;
 uniform sampler2D texture;
 uniform sampler2D background;
+uniform int isCurve; // 1 if we are drawing a curve atop the canvas
 
 // The coordinates of the image plane
 float x;
@@ -202,9 +203,24 @@ void main() {
     x = geom_texCoord[0];
     y = geom_texCoord[1];
     vec4 fint = texture2D(texture, vec2(x, 0.5));
-    if(abs(2.*(y-0.5)) <= fint.x) gl_FragColor = texture2D(background, vec2(x,y));
+    if(isCurve == 1) gl_FragColor = vec4(1,0,0,1);
+    else if(abs(2.*(y-0.5)) <= fint.x) gl_FragColor = texture2D(background, vec2(x,y));
     else gl_FragColor = texture2D(texture, vec2(1.-abs(2.*(0.5-y)), 0.5))
                     *texture2D(background, vec2(x,y));
+}
+</script>
+
+<script id="vertexShader2" type="x-shader/x-vertex">
+attribute vec3 coordinates;
+void main(void) {
+ gl_Position = vec4(coordinates, 1.0);
+}
+</script>
+<script id="fragmentShader2" type="x-shader/x-fragment">
+precision highp float;
+uniform vec4 color;
+void main(void) {
+ gl_FragColor = vec4(color);
 }
 </script>
 
@@ -245,6 +261,29 @@ void main() {
         } else {
             return program;
         }
+    }
+    function drawHighlight(color, zindex) {
+        gl.useProgram(program2);
+        var vertices = [];
+        var numVertices = curve.length;
+        for (var i = 0; i < numVertices; i++) {
+            point = curve[i];
+            // This vertex, the next vertex, and the center each time
+            vertices.push(point[0]);
+            vertices.push(point[1]);
+            vertices.push(zindex);
+        }
+        var buff2 = gl.createBuffer();
+        gl.bindBuffer(gl.ARRAY_BUFFER, buff2);
+        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
+        // Get the attribute location
+        var coord = gl.getAttribLocation(program2, "coordinates");
+        // Point an attribute to the currently bound VBO
+        gl.vertexAttribPointer(coord, 3, gl.FLOAT, false, 0, 0);
+        // Enable the attribute
+        gl.enableVertexAttribArray(coord);
+        gl.uniform4fv(gl.getUniformLocation(program2,"color"), color);
+        gl.drawArrays(gl.LINE_STRIP, 0, vertices.length/3);
     }
 
     function loop(gl, program, vertexBuffer, indexBuffer) {
@@ -321,6 +360,8 @@ void main() {
         gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
         gl.drawElements(gl.TRIANGLES, 6, gl.UNSIGNED_SHORT, 0);
         gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, null);
+
+        drawHighlight([1,1,1,1], 0);
         gl.useProgram(null);
         window.requestAnimationFrame(() => { loop(gl, program, vertexBuffer, indexBuffer); });
     }
@@ -328,6 +369,7 @@ void main() {
     let canvas = document.querySelector('#webglCanvas');
     let gl = canvas.getContext("webgl");
     let program = createGlslProgram(gl, 'vertexShader', 'fragmentShader');
+    let program2 = createGlslProgram(gl, 'vertexShader2', 'fragmentShader2');
     let vertexData = [
         -1.0, -1.0, 0.0,  // Lower left
         0.0,  0.0,
@@ -433,6 +475,10 @@ $("#treble").change(function() {
     var value = parseInt(document.getElementById("treble").value);
     treble.gain.value = value;
 });
+$("#balance").change(function() {
+    var value = parseInt(document.getElementById("balance").value);
+    balance.gain.value = value;
+});
 $("#loadFile").click(function() {
     file = document.getElementById("fileLoc").files[0];
     fr = new FileReader();
@@ -455,21 +501,26 @@ $("#loadFile").click(function() {
         function(e){ console.log("Error with decoding audio data" + e.err); });
     };
 });
+var drawingCurve = false;
+var curve = [];
 $("#webglCanvas").mousemove(function (event) {
     var clientRect = $("#webglCanvas")[0].getBoundingClientRect();
     var x = event.clientX - clientRect.left;
     var y = clientRect.height - (event.clientY - clientRect.top);
-    // Convert to 0 to 1
-    var xc = x / clientRect.width;
-    var yc = y / clientRect.height;
+    // Convert to -1 to 1
+    var xc = 2*x / clientRect.width - 1;
+    var yc = 2*y / clientRect.height - 1;
     var frequencyBin = xc*analyser.frequencyBinCount;
+    if (drawingCurve) {
+        curve.push([xc, yc]);
+    }
 });
 $("#webglCanvas").mousedown(function (event) {
-    if (audioCtx.state == "running") {
-        audioCtx.suspend();
-    } else {
-        audioCtx.resume();
-    }
+    curve = [];
+    drawingCurve = true;
+});
+$("#webglCanvas").mouseup(function (event) {
+    drawingCurve = false;
 });
 </script>
 </body>
